src/test/01-Basic/91.txt
91.ck:6:3: error: [..., ...] is invalid subscript syntax.
[6] a[1,1] => int b;
      ^
